# cbs

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  REFACTORING_PLAN.md  SDD and the Descent into Chaos.md  SPEC_KIT_INTEGRATION_SUMMARY.md  cbs.mdc  overview.md
.agent-os/product/: mission-lite.md  roadmap.md  tasks.md
.cursor/rules/: cbs.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-pr-checklist.yml  ci.yml  flutter-cells.yml  python-cells.yml  rust-ci.yml  semantic-pr.yml
ai/.agent-os/commands/: create-cell.md  modify-cell-spec.md
ai/.agent-os/standards/: cbs-cell-standards.md  cbs-command-context.md  code-style.md  tech-stack.md
ai/docs/: agent_os_standards.md  cell_guard.md  data_flows.md  error_codes.md  llm_tripwires.md
ai/docs/schemas/: cell_dna.schema.json
ai/scripts/: generate_cell_map.py  validate_dna.py  validate_envelopes.sh  validate_spec.py
applications/cli_greeter/: app.yaml
applications/flutter_flow_web/: birthmap.yaml  pubspec.yaml
applications/flutter_flow_web/.cbs-spec/: spec.md
applications/flutter_flow_web/.dart_tool/: package_config.json  package_config_subset  (+1 more)
body/: Cargo.toml
body/src/: main.rs
body_bus/: Cargo.toml
body_bus/src/: lib.rs
body_bus/tests/: integration_tests.rs
body_core/: Cargo.toml
body_core/src/: app_loader.rs  lib.rs
cbs-agent/: .agent-os.md  .cbs-context  CORE_INSTRUCTIONS_REVIEW.md  INSTRUCTIONS_REDESIGN_COMPLETE.md  INSTRUCTION_REDESIGN_PROPOSAL.md  README.md  config.yml
cbs-agent/commands/: analyze-product.md  create-cell.md  create-spec.md  create-tasks.md  execute-tasks.md  modify-cell-spec.md  plan-product.md
cbs-agent/docs/: constitution.md  constitution_update_checklist.md  spec-kit-cbs-quickstart.md
cbs-agent/scripts/: cbs  cbs-app-context  cbs-app-spec  cbs-bus-simulator  cbs-cell  cbs-cell-create  cbs-cell-focus  cbs-cells-hierarchy  cbs-constitution  cbs-implement  cbs-new-project  cbs-realtime-feedback  cbs-regenerate-cell  cbs-spec  cbs-validate  cbs-validate-architecture  cbs-validate-code-isolation  cbs-validate-isolation  cbs-validate-spec  cbs-work  cbs-workflow  cbs_standards_sync.sh  generate_cell_catalog.py  generate_cell_from_spec.py  generate_cell_map.py  milestone_commit.sh  validate_envelopes.sh  validate_spec.py
cbs-agent/setup/: project.sh
cbs-agent/standards/: agent_os_standards.md  cbs-command-context.md  cbs-hierarchical-structure.md  cbs-standards.md  code-style.md  dart-cbs-standards.md
cbs-agent/templates/: app_spec.md  cell-plan-template.md  cell-spec-template.md  cell-tasks-template.md  spec_kit_cbs_app.md
cbs-agent/tools/: cbs-cell
cells/: README.md  SPEC_TEMPLATE.md
cells/flutter/: README.md
cells/python/: README.md  pyproject.toml
docs/: architecture.md  framework-usage.md  getting-started.md
examples/: Cargo.toml
examples/applications/cli_greeter/cells/greeter_rs/: Cargo.toml  SPEC.md
examples/applications/cli_greeter/cells/greeter_rs/src/: lib.rs
examples/applications/cli_greeter/cells/io_prompt_name_rs/src/: lib.rs
examples/applications/flutter_flow_web/: app.yaml
examples/applications/flutter_flow_web/ai/: app_spec.md  cell_map.md  feature-workflow.md  history.md  plan.md  research.md  tasks.md
examples/applications/flutter_flow_web/cells/flow_text/lib/: flow_text_widget.dart
examples/applications/flutter_flow_web/cells/flow_ui/lib/: flow_ui_cell.dart
examples/applications/flutter_flow_web/cells/navbar_ui/: pubspec.yaml
examples/applications/flutter_flow_web/cells/navbar_ui/lib/widgets/: navbar_widget.dart
examples/applications/flutter_flow_web/cells/navigation_manager/lib/services/: navigation_service.dart
examples/applications/flutter_flow_web/cells/screen_home/: pubspec.yaml
examples/applications/flutter_flow_web/cells/screen_home/ai/: spec.md
examples/applications/flutter_flow_web/cells/screen_home/lib/widgets/: home_screen_widget.dart
examples/applications/flutter_flow_web/cells/screen_home/test/: screen_home_cell_test.dart  screen_home_cell_test.mocks.dart
examples/applications/flutter_flow_web/cells/screen_monitor/lib/widgets/: message_list_view.dart  monitor_screen_widget.dart
examples/applications/flutter_flow_web/lib/: flutter_flow_app_cell.dart  main.dart  mock_bus.dart
examples/applications/flutter_flow_web/lib/widgets/: main_app_widget.dart
examples/applications/flutter_flow_web/test/: app_integration_test.dart  app_integration_test.mocks.dart
examples/applications/flutter_flow_web/web/: flutter_bootstrap.js  flutter_service_worker.js  index.html
framework/: Cargo.toml
framework/body/: Cargo.toml
framework/body/src/: main.rs
framework/body/tests/: app_loading_tests.rs
framework/body_bus/: Cargo.toml
framework/body_bus/src/: lib.rs
framework/body_core/src/: lib.rs
framework/docs/: agent-os-guide.md  architecture.md  cell_catalog.md  cell_catalog_usage.md  cell_guard.md  cell_map.md  data_flows.md  framework-usage.md  getting-started.md  master_build_specs.md  mission.md  quick-reference.md  subject-naming.md  tech-stack.md  the-cbs-way.md
framework/docs/schemas/: envelope.schema.json
framework/docs/schemas/samples/: envelope_error.json
framework/docs/testing/: validation.md
framework/shared_cells/dart/cbs_sdk/: pubspec.yaml
framework/shared_cells/dart/cbs_sdk/lib/src/: cell.dart  nats_bus.dart
framework/shared_cells/rust/web_server/src/: lib.rs
scripts/: cbs_standards_sync.sh  cell_guard.sh  cell_import_guard.sh
shared_cells/rust/web_server/: Cargo.toml
shared_cells/rust/web_server/tests/: integration_tests.rs
template/: Cargo.toml  README.md  app.yaml
template/.cbs/: README.md
tools/: cbs-cell  cbs-new
(+167 files in other folders)
