[workspace]
resolver = "2"
members = [
    "body",
    "body_core",
    "body_bus",
    "applications/cli_greeter/cells/greeter_rs",
    "applications/cli_greeter/cells/io_prompt_name_rs", 
    "applications/cli_greeter/cells/logic_greet_rs",
    "applications/cli_greeter/cells/io_print_greeting_rs",
    "shared_cells/rust/web_server"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1.0"
async-nats = "0.20"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
