[package]
name = "body_bus"
version = "0.1.0"
edition = "2021"

[dependencies]
body_core = { path = "../body_core" }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
