[workspace]
resolver = "2"
members = [
    "cli_greeter/cells/greeter_rs",
    "cli_greeter/cells/io_prompt_name_rs",
    "cli_greeter/cells/logic_greet_rs", 
    "cli_greeter/cells/io_print_greeting_rs"
]

[workspace.dependencies]
# CBS Framework dependencies
cbs_framework = { path = "../framework" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1.0"
async-nats = "0.20"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }


