[workspace]
resolver = "2"
members = [
    "applications/*/cells/*"
]

[workspace.dependencies]
# CBS Framework dependencies
cbs_framework = { path = "../framework" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1.0"
async-nats = "0.20"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Development dependencies
mockito = "1.0"

