[package]
name = "body"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "body"
path = "src/main.rs"

[dependencies]
body_core = { path = "../body_core" }
web_server = { path = "../shared_cells/rust/web_server" }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

# Note: body_bus with NATS disabled due to Rust version compatibility
# body_bus = { path = "../body_bus" }
